[package]
name = "gchemol-gut"
version = "0.2.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Selected utilities for Rust development"
homepage = "https://github.com/gchemol/gut"
repository = "https://github.com/gchemol/gut"
license-file = "LICENSE"

[dependencies]
# core utils
serde = {version="1", features = ["derive"]}
serde_json = "1"
anyhow = "1"                    # better than failure
itertools = "0.10"
# logging
log = "0.4"
env_logger = "0.9"
# configuration
toml = "0.5"
lazy_static = "1"
# command line
structopt = "0.3"
duct = "0.13"
clap = {version="3", features = ["derive"]}
tempfile = "3"
# parallel
rayon = "1"
shell-escape = "0.1"

[dev-dependencies]

[features]
adhoc = [] # for adhoc hacking
