[package]
name = "gchemol-gut"
version = "0.4.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Selected utilities for Rust development"
homepage = "https://github.com/gchemol/gut"
repository = "https://github.com/gchemol/gut"
license = "MIT"

[dependencies]
# core utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"                                     # better than failure
itertools = "0.10"
# logging
log = "0.4"
env_logger = "0.9"
# configuration
toml = "0.5"
lazy_static = "1"
# command line
duct = "0.13"
# https://docs.rs/clap/latest/clap/_features/index.html
clap = { version = "4.0.18", features = ["derive", "env", "cargo"] }
tempfile = "3"
# parallel
rayon = "1"
shell-escape = "0.1"

[dev-dependencies]

[features]
adhoc = [] # for adhoc hacking
